crates/etas_tests/fixtures/compiler/projects/positive/todo_cli/src/app/todo/renderer.es
module app.todo.renderer;

import app.todo.model.{TaskList};

public flow render_summary(tasks: TaskList) -> string ![] {
    return "todo summary";
}
