crates/etas_tests/fixtures/compiler/projects/negative/effect_public_api_08/src/app/effects/service.es
module app.effects.service;

import std.io.{println};
import app.effects.model.{EffectInput};

public flow run_effect_project(input: EffectInput) -> i32 ![]
{
    println(input.body);
    return 3;
}
